Fixed spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -36,8 +36,8 @@ p b {
 }
 
 section {
-  padding-top: 150px;
-  padding-bottom: 150px;
+  padding-top: 140px;
+  padding-bottom: 140px;
 }
 
 h1 {
@@ -130,7 +130,7 @@ header nav ul li:not(:last-child) {
 }
 
 .projects-group {
-  margin: 80px 0 160px;
+  margin: 70px 0;
 }
 .projects-group h4 {
   margin-bottom: 18px;
@@ -210,7 +210,7 @@ footer p:first-child {
     letter-spacing: 0.2px;
   }
   .projects-group .row .col-md-5:nth-child(2) .project {
-    margin-top: 160px;
+    margin-top: 70px;
   }
   header nav ul li:not(:last-child) {
     margin-right: 0.8rem !important;
